--- a/sections/LHC_ObjectReconstruction.tex
+++ b/sections/LHC_ObjectReconstruction.tex
@@ -88,7 +88,7 @@ The rate of bremsstrahlung radiation is inversely proportional to the square of 
 \begin{figure}
     \centering
     \includegraphics[width=0.7\linewidth]{figures/LHC/MuonTypes.png}
-    \caption{ Schematic of four different types of muons reconstructed using several layers of sub-detectors \cite{MuonReco}.\label{fig:MuonFig}}
+    \caption{ Schematic of four different types of muons reconstructed using several layers of sub-detectors \cite{MuonFig}.\label{fig:MuonFig}}
 \end{figure}
 
 Similar to the electron reconstruction discussed in Section \ref{subsec:ParticleRecon_Elec}, reconstructed muons from the hard scatter are identified and isolated from the muons originating from secondary sources. Muon identification working points are developed by applying quality requirements in the simulated $t\bar{t}$ events where a $W$ from top-quark decays to a muon and a neutrino. The quality cuts require at least one-pixel hit, five SCT hits, and not more than three pixel or SCT holes. At least $10\%$ of TRT hits are included in the fit for the $0.1<\eta<0.9$ range with full TRT coverage \cite{MuonReco}. Three variables are used in muon identification; $q/p$ significance, which is defined as the ratio of muon's charge and momentum divided by the sum-quadrature of their uncertainties; $\rho^{'}$ defined as the absolute difference of transverse momentum measurements in the ID and MS divided by the combined track's $p_{T}$; and the normalized $\chi ^{2}$ of the combined track fit \cite{MuonReco}. 
