--- a/biblio.bib
+++ b/biblio.bib
@@ -65,50 +65,6 @@ author = {Sheldon L. Glashow},
 year = {1961}
 }
 
-
-@article{Buchmüller:984122,
-      author        = {{Buchmüller, W and Lüdeling, C}},
-      title         = {{Field Theory and Standard Model}},
-      reportNumber  = "hep-ph/0609174, DESY-06-151, DESY-2006-151",
-      pages         = "70 p",
-      url           = "https://cds.cern.ch/record/984122",
-      year          = {2006}
-}
-
-@article{PhysRev.96.191,
-  title = {{Conservation of Isotopic Spin and Isotopic Gauge Invariance}},
-  author = {Yang, C. N. and Mills, R. L.},
-  journal = {Phys. Rev.},
-  volume = {96},
-  issue = {1},
-  pages = {191--195},
-  numpages = {0},
-  year = {1954},
-  month = {Oct},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRev.96.191},
-  url = {https://link.aps.org/doi/10.1103/PhysRev.96.191}
-}
-
-@article{Hollik:1281946,
-  doi = {10.48550/ARXIV.1012.3883},
-  
-  url = {https://arxiv.org/abs/1012.3883},
-  
-  author = {Hollik, W.},
-  
-  keywords = {High Energy Physics - Phenomenology (hep-ph), FOS: Physical sciences, FOS: Physical sciences},
-  
-  title = {{Quantum field theory and the Standard Model}},
-  
-  publisher = {arXiv},
-  
-  year = {2010},
-  
-  copyright = {Creative Commons Attribution 3.0 Unported}
-}
-
-
 %some more references for theory we can use 
 @misc{HiggsMechanism,
       author        = {{Nguyen, K}},
@@ -529,7 +485,7 @@ url = { https://doi.org/10.1007/JHEP04(2013)027}
 	number = {11},
 	pages = {063--063},
 	author = {{Stefano Catani and Frank Krauss and Bryan R Webber and Ralf Kuhn}}, 
-	title = {QCD  Matrix Elements + Parton Showers}},
+	title = {QCD  Matrix Elements + Parton Showers},
 }
 
 @article{PowhegPythia,
@@ -596,8 +552,6 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
   year = {2010},
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
-
-
 @article{FriedmanSmoother,
     author = "{Friedman, Jerome H.}",
     title = "{A VARIABLE SPAN SMOOTHER}",
@@ -605,7 +559,6 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
     month = "10",
     year = "1984"
 }
-%% Haven't been used can delete later
 @article{QCDScaleAndPDFUnc,
 	doi = {10.1140/epjc/s10052-016-4430-0},
 	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-016-4430-0},
@@ -1176,20 +1129,6 @@ author = {{A. Salam and J.C. Ward}}
   doi = {10.1103/PhysRevD.101.113003},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.101.113003}
 }
-@article{EFT_Dimension8VBS,
-  title = { $pp \rightarrow jj e^{\pm} \mu^{\pm} \nu \nu $ and $pp \rightarrow jj e^{\pm} \mu^{\mp} \nu \nu $ at $\mathcal{O}(\alpha_{em}^{6})$ and $\mathcal{O}(\alpha_{em}^{4}) \mathcal{O}(\alpha_{s}^{2})$ for the study of the quartic electroweak gauge boson vertex at CERN LHC},
-  author = {{\'Eboli, O. J. P. and Gonzalez-Garcia, M. C. and Mizukoshi, J. K.}},
-  journal = {Phys. Rev. D},
-  volume = {74},
-  issue = {7},
-  pages = {073005},
-  numpages = {14},
-  year = {2006},
-  month = {Oct},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.74.073005},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.74.073005}
-}
 
 @article{SMEFT,
 	doi = {10.1007/jhep12(2017)070},
@@ -1204,30 +1143,6 @@ author = {{A. Salam and J.C. Ward}}
 	journal = {Journal of High Energy Physics}
 }
 
-@article{Dim6_VBS,
-	doi = {10.1140/epjc/s10052-019-6893-2},
-	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-019-6893-2},
-	year = 2019,
-	month = {may},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {79},
-	number = {5},
-	author = {Raquel Gomez-Ambrosio},
-	title = {{Studies of dimension-six EFT effects in vector boson scattering}},
-	journal = {The European Physical Journal C}
-}
-@article{SMEFT_Dim6_VBS,
-	doi = {10.1140/epjc/s10052-021-09347-7},
-	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-021-09347-7},
-	year = 2021,
-	month = {jun},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {81},
-	number = {6},
-	author = {{Jacob J. Ethier and Raquel Gomez-Ambrosio and Giacomo Magni and Juan Rojo}},
-	title = {{SMEFT analysis of vector boson scattering and diboson data from the LHC Run II}},
-	journal = {The European Physical Journal C}
-}
 @article{Dim7_EFT,
 	doi = {10.1103/physrevd.90.125023},
 	url = {https://doi.org/10.1103%2Fphysrevd.90.125023},
